[tool.poetry]
name = "Sidewinder"
version = "0.1.0"
description = "Django starter kit"
authors = ["Petr Stribny <petr@stribny.name>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.0.4"
djangorestframework = "3.15.1"
django-extensions = "3.2.3"
Faker = "24.14.0"
django-allauth = "0.62.1"
argon2-cffi = "23.1.0"
django-htmx = "1.17.3"
drf-spectacular = "0.27.2"
drf-spectacular-sidecar = "2024.4.1"
django-environ = "0.11.2"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
django-structlog = "8.0.0"
pillow = "10.3.0"
drf-standardized-errors = "0.13.0"
django-cors-headers = "4.3.1"
rich = "13.7.1"
huey = "2.5.0"
redis = "5.0.4"
django-huey-monitor = "0.9.0"
django-dbbackup = "4.1.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "1.12.1"
django-watchfiles = "0.1.1"
django-debug-toolbar = "4.3.0"
bandit = "1.7.8"
snoop = "0.4.3"
pre-commit = "3.7.0"
django-silk = "5.1.0"
ipython = "8.24.0"
ruff = "0.4.2"

[tool.poetry.group.test.dependencies]
pytest = "8.1.2"
pytest-django = "4.8.0"
pytest-icdiff = "0.9"
pytest-randomly = "3.15.0"
pytest-cov = "5.0.0"
pytest-sugar = "1.0.0"
pytest-factoryboy = "2.7.0"
openapi-spec-validator = "0.7.1"
pytest-xdist = "3.5.0"
pytest-playwright = "0.4.4"

[tool.poetry.group.graphviz]
optional = true

[tool.poetry.group.graphviz.dependencies]
pydotplus = "2.0.2"
pygraphviz = "1.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.2"
mkdocs-material = "9.1.21"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
