[project]
name = "Sidewinder"
version = "0.2.0"
description = "Django starter kit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions>=4.1",
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "faker>=37.3.0",
    "django-allauth>=65.8.0",
    "argon2-cffi>=23.1.0",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.5.1",
    "django-environ>=0.12.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "django-structlog>=9.1.1",
    "pillow>=11.2.1",
    "drf-standardized-errors>=0.14.1",
    "django-cors-headers>=4.7.0",
    "rich>=14.0.0",
    "huey>=2.5.3",
    "redis>=6.1.0",
    "django-huey-monitor>=0.9.0",
    "django-dbbackup>=4.3.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.2.0",
    "django-watchfiles>=1.1.0",
    "django-debug-toolbar>=5.2.0",
    "bandit>=1.8.3",
    "snoop>=0.6.0",
    "django-silk>=5.3.2",
    "ipython>=9.2.0",
    "ruff>=0.11.10",
]
test = [
    "pytest-django>=4.11.1",
    "pytest>=8.3.5",
    "pytest-icdiff>=0.9",
    "pytest-randomly>=3.16.0",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-factoryboy>=2.7.0",
    "openapi-spec-validator>=0.7.1",
    "pytest-xdist>=3.6.1",
    "pytest-playwright>=0.7.0",
]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocs>=1.6.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff.lint]
extend-select = ["I"]
